--- a/css/main.css
+++ b/css/main.css
@@ -204,3 +204,8 @@ background: #4cc5c9;
 	border-radius: 100px;
 	border: 3px solid #36BBCE
 }
+.css-adaptive {
+display: block;
+max-width: 100%;
+height: auto;
+}
